# Facebook Ignited now throws exceptions when there is an error from itself or from Facebook class.
# Added a new config 'fb_logexcept' which determines if FBIgnitedException class will send logs to PHP error_log().
# fb_fql() no longer has 'multiquery' parameter, it handles multiple or single queries depending on value you pass it.
============ v1.2.2 ============
# Updated the Facebook PHP SDK to v3.2.1
# Fixed an issue where the fb_check_permissions() method was always returning true, thanks to clearright via forums.
# Fixed an issue where the fb_create_event() was not using the correct array to handle events.
# fb_login_url() and fb_check_permissions() methods now use arrays to receive parameters so that we can expand their functionality.
  Check the method docs on GitHub wiki for more information regarding these changes.
============ v1.2.1 ============
# Merged Pull Request #11 by dcostalis: Fixed the autoloader config file for Spark.
# Merged Pull Request #12 by dcostalis: Added a conditional to the translating query strings to $_REQUEST[] if existent only.
============ v1.2.0 ============
# Branched the full install over into it's own branch and formatted master for sparks generation.
============ v1.1.2 ============
# Adding more defined visibility to all methods, preventing users from accessing the $this->globals variable.
# Adding support for file uploads via Facebook Ignited in the fb_config.php
# Added a new method fb_notification() to handle Facebook notifications.
# Added a fix for the constant redirect issue for some users not enabling query strings.
============ v1.1.1 ============
# Upgraded the CodeIgniter to v2.1.3
# Updated the Facebook PHP SDK to v3.2.0
# Added the script redirect to fb_logout_url() method.
# Clarified the fb_request_dialog() by change the parameter $name to $message.
# Cleaned up code on several methods, allowing for code to be read easier.
============ v1.1.0 ============